# ReaderT

./: .gitignore  README.md  build.gradle
ambilWarna/src/main/java/yuku/ambilwarna/widget/: AmbilWarnaPrefWidgetView.java
code/src/main/: AndroidManifest.xml
fBReader/: build.gradle
fBReader/src/main/: AndroidManifest.xml
fBReader/src/main/assets/default/: styles.css  styles.xml
fBReader/src/main/assets/default/tapzones/: left_to_right.xml
fBReader/src/main/cpp/: CMakeLists.txt
fBReader/src/main/cpp/NativeFormats/fbreader/src/formats/css/: StyleSheetTable.cpp
fBReader/src/main/cpp/NativeFormats/fbreader/src/formats/doc/: OleStorage.cpp
fBReader/src/main/cpp/NativeFormats/zlibrary/text/src/model/: ZLTextModel.cpp  ZLTextStyleEntry.cpp  ZLTextStyleEntry.h
fBReader/src/main/cpp/expat-2.0.1/lib/: xmlparse.c
fBReader/src/main/java/org/geometerplus/android/fbreader/: AppNotifier.java  BaseFragment.java  CancelActivity.java  DisplayBookPopupAction.java  FBAndroidAction.java  FBReader.java  FBReaderApplication.java  FBReaderMainActivity.java  FBUtil.java  MenuData.java  OpenVideoAction.java  PluginListActivity.java  PopupPanel.java  SearchAction.java  SelectionBookmarkAction.java  SelectionCopyAction.java  SelectionHidePanelAction.java  SelectionPopup.java  ShareBookAction.java  ShowBookmarksAction.java  ShowCancelMenuAction.java  ShowLibraryAction.java  ShowMenuAction.java  SimplePopupWindow.java  SwitchProfileAction.java  TOCActivity.java  TextSearchPopup.java  ZLTreeAdapter.java
fBReader/src/main/java/org/geometerplus/android/fbreader/api/: TextPosition.java
fBReader/src/main/java/org/geometerplus/android/fbreader/bookmark/: BookmarksActivity.java  BookmarksUtil.java  EditBookmarkActivity.java  EditStyleActivity.java
fBReader/src/main/java/org/geometerplus/android/fbreader/config/: ConfigService.java  ConfigShadow.java  SQLiteConfig.java
fBReader/src/main/java/org/geometerplus/android/fbreader/constant/: PreviewConfig.java
fBReader/src/main/java/org/geometerplus/android/fbreader/dict/: InternalUtil.java
fBReader/src/main/java/org/geometerplus/android/fbreader/image/: ImageViewActivity.java
fBReader/src/main/java/org/geometerplus/android/fbreader/libraryService/: BookCollectionShadow.java  LibraryService.java  SQLiteBooksDatabase.java
fBReader/src/main/java/org/geometerplus/android/util/: EditAuthorsDialogActivity.java  EditListDialogActivity.java  EditTagsDialogActivity.java  PackageUtil.java  SearchDialogUtil.java  UIUtil.java
fBReader/src/main/java/org/geometerplus/fbreader/book/: BookCollection.java  BookEvent.java  BookMergeHelper.java  Bookmark.java  BookmarkQuery.java  BookmarkUtil.java  BooksDatabase.java  DbBook.java  HighlightingStyle.java  XMLSerializer.java
fBReader/src/main/java/org/geometerplus/fbreader/bookmodel/: BookModel.java
fBReader/src/main/java/org/geometerplus/fbreader/fbreader/: ActionCode.java  BookmarkHighlighting.java  ChangeFontSizeAction.java  FBAction.java  FBReaderApp.java  FBView.java  SelectionClearAction.java  TapZoneMap.java  TurnPageAction.java
fBReader/src/main/java/org/geometerplus/fbreader/network/: NetworkBookItem.java  NetworkImage.java
fBReader/src/main/java/org/geometerplus/fbreader/tips/: TipsManager.java
fBReader/src/main/java/org/geometerplus/fbreader/util/: AutoTextSnippet.java
fBReader/src/main/res-black/drawable/: ic_list_group_empty_black.xml  reader_button_border_black.xml  reader_button_border_checked_black.xml  reader_progress_bar_bg_black.xml  reader_seek_bar_thumb_black.xml
fBReader/src/main/res-black/values/: colors.xml
fBReader/src/main/res-green/drawable/: ic_list_group_empty_green.xml  reader_button_border_checked_green.xml  reader_button_border_green.xml  reader_progress_bar_bg_green.xml  reader_seek_bar_thumb_green.xml
fBReader/src/main/res-green/values/: colors.xml
fBReader/src/main/res-themeBlack/values/: colors.xml
fBReader/src/main/res-themeGreen/values/: colors.xml
fBReader/src/main/res-themeYellow/values/: colors.xml
fBReader/src/main/res-yellow/drawable/: ic_list_group_empty_yellow.xml  reader_button_border_checked_yellow.xml  reader_button_border_yellow.xml  reader_progress_bar_bg_yellow.xml  reader_seek_bar_thumb_yellow.xml
fBReader/src/main/res-yellow/values/: colors.xml
fBReader/src/main/res/drawable/: ic_list_group_empty.xml  ic_list_library_author.xml  ic_list_library_authors.xml  ic_list_library_book.xml  ic_list_library_books.xml  ic_list_library_folder.xml  ic_list_library_permission_denied.xml  ic_list_library_tag.xml  ic_list_library_tags.xml  ic_list_library_zip.xml  reader_button_bg.xml  reader_button_border_checked.xml  reader_catalog_list_divider.xml  reader_hv_bg.xml  reader_loading.xml  reader_progress_bar_bg.xml  reader_sl_theme_black.xml  reader_sl_theme_green.xml  reader_sl_theme_white.xml  reader_sl_theme_yellow.xml  reader_theme_black.xml  reader_theme_black_checked.xml  reader_theme_green.xml  reader_theme_green_checked.xml  reader_theme_white.xml  reader_theme_white_checked.xml  reader_theme_yellow.xml  reader_theme_yellow_checked.xml
fBReader/src/main/res/layout/: activity_book_enter.xml  activity_tts_player.xml  bookmark_item.xml  fb_loading_dialog.xml  item_bottom_list.xml  layout_menu_book.xml  main.xml  reader_book_label.xml  reader_book_mark_layout.xml  reader_bottom_menu_first_layout.xml  reader_fragment_book_mark_list.xml  reader_fragment_catalog.xml  reader_fragment_toc.xml  reader_item_list_book_mark.xml  reader_menu_more.xml  reader_menu_setting.xml  reader_menu_top.xml  reader_mini_player.xml  reader_setting_menu.xml  reader_toc_tree_item.xml  search_panel.xml  selection_panel.xml  toc_tree_item.xml
fBReader/src/main/res/values/: colors.xml  strings.xml  styles.xml
fBReader/src/main/res/xml/: provider_paths.xml  searchable.xml
gradle/wrapper/: gradle-wrapper.properties
superToasts/src/main/: AndroidManifest.xml
superToasts/src/main/java/com/github/johnpersano/supertoasts/: SuperToast.java
superToasts/src/main/res/layout/: superactivitytoast_button.xml
(+123 files in other folders)
